infrastructure/loki/fluent-bit-multi-arch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loki-fluent-bit-amd64
  namespace: logging
  labels:
    app: fluent-bit-loki
    arch: amd64
spec:
  selector:
    matchLabels:
      app: fluent-bit-loki
      arch: amd64
  template:
    metadata:
      labels:
        app: fluent-bit-loki
        arch: amd64
      annotations:
        prometheus.io/path: /api/v1/metrics/prometheus
        prometheus.io/port: "2020"
        prometheus.io/scrape: "true"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: loki-fluent-bit-loki
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: fluent-bit-loki
          image: "grafana/fluent-bit-plugin-loki:2.9.1"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /fluent-bit/etc
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: etcmachineid
              mountPath: /etc/machine-id
              readOnly: true
            - name: fluent-bit-state
              mountPath: /run/fluent-bit
          ports:
            - containerPort: 2020
              name: http-metrics
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: loki-fluent-bit-loki
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: etcmachineid
          hostPath:
            path: /etc/machine-id
            type: File
        - name: fluent-bit-state
          emptyDir: {}
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loki-fluent-bit-arm64
  namespace: logging
  labels:
    app: fluent-bit-loki
    arch: arm64
spec:
  selector:
    matchLabels:
      app: fluent-bit-loki
      arch: arm64
  template:
    metadata:
      labels:
        app: fluent-bit-loki
        arch: arm64
      annotations:
        prometheus.io/path: /api/v1/metrics/prometheus
        prometheus.io/port: "2020"
        prometheus.io/scrape: "true"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: loki-fluent-bit-loki
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: fluent-bit-loki
          image: "grafana/fluent-bit-plugin-loki:2.9.1-arm64"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /fluent-bit/etc
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: etcmachineid
              mountPath: /etc/machine-id
              readOnly: true
            - name: fluent-bit-state
              mountPath: /run/fluent-bit
          ports:
            - containerPort: 2020
              name: http-metrics
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: loki-fluent-bit-loki
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: etcmachineid
          hostPath:
            path: /etc/machine-id
            type: File
        - name: fluent-bit-state
          emptyDir: {}
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
